SD-015 出荷伝票一括登録 增加导出功能

--- a/sd-s4apps01/batchcreationdn/webapp/view/Main.view.xml
+++ b/sd-s4apps01/batchcreationdn/webapp/view/Main.view.xml
@@ -50,13 +50,14 @@
                 id="idSmartTable"
                 entitySet="SalesOrderForDN"
                 smartFilterId="idSmartFilterBar"
-                enableExport="false"
+                enableExport="true"
                 persistencyKey="SalesOrderForDNTable"
                 smartVariant="idSmartVariantManagement"
                 header="{i18n>tableHeaderTitle}"
                 placeToolbarInTable="true"
                 editable="true"
                 beforeRebindTable="onBeforeRebindTable"
+                beforeExport="onBeforeExport"
             >
                 <smartTable:customToolbar>
                     <OverflowToolbar id="idOverflowToolbar">
@@ -83,7 +84,7 @@
                         <rowmodes:Auto id="_IDGenAuto" ></rowmodes:Auto>
                     </t:rowMode>
                     <t:Column id="_IDGenColumn"
-                        width="4rem"
+                        width="6rem"
                         label="{/#SalesOrderForDNType/Type/@sap:label}"
                         sortProperty="Type"
                         filterProperty="Type"
