20250418 FI-007 有償支給純額計算処理 rate bug fix

--- a/fico-s4apps01/paidpaydocument/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpaydocument/webapp/view/Main.view.xml
@@ -190,7 +190,7 @@
                 <core:CustomData key="p13nData" value='\{"columnKey":"ChargeableRate", "leadingProperty":"ChargeableRate", "sortProperty":"ChargeableRate", "filterProperty": "ChargeableRate"}'/>
               </t:customData> 
               <t:template>
-                <Text text="{'ChargeableRate'}" wrapping="false"/>
+                <Text text="{ChargeableRate}" wrapping="false"/>
               </t:template>
             </t:Column>
 
@@ -280,7 +280,7 @@
                 <core:CustomData key="p13nData" value='\{"columnKey":"RevenueRate", "leadingProperty":"RevenueRate", "sortProperty":"RevenueRate", "filterProperty": "RevenueRate"}'/>
               </t:customData>
               <t:template>
-                <Text text="{RevenueRate'}" wrapping="false"/>
+                <Text text="{RevenueRate}" wrapping="false"/>
               </t:template>
             </t:Column>
 
