MM-011/021 購買申請登録/承認 CR#4359

--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Display.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Display.view.xml
@@ -67,6 +67,7 @@
                                     </Select>
                                 </smartFilterBar:customControl>
                             </smartFilterBar:ControlConfiguration>
+                            <smartFilterBar:ControlConfiguration key="PolinkBy" visibleInAdvancedArea="true" label="{i18n>PolinkBy}" index="65" />
                             <!-- ADD END BY XINLEI XU 2025/04/21 CR#4359 -->
                         </smartFilterBar:controlConfiguration>
                     </smartFilterBar:SmartFilterBar>
