--- a/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
@@ -82,7 +82,7 @@
 		  </OverflowToolbar>
 		</smartTable:customToolbar>
 
-		  <t:Table id="Table_Calc"  rowMode="Auto" columnResize="onAfterRendering">
+		  <t:Table id="Table_Calc"  rowMode="Auto" columnResize="onAfterRendering" columnMove="onAfterRendering">
             <t:Column id="CompanyCode" label="{i18n>CompanyCode}" width="6rem" sortProperty="CompanyCode" filterProperty="CompanyCode" autoResizable="true">
               <t:customData>
                 <core:CustomData key="p13nData" value='\{"columnKey":"CompanyCode", "leadingProperty":"CompanyCode", "sortProperty":"CompanyCode", "filterProperty": "CompanyCode"}'/>
